--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="bn">
+<!DOCTYPE html>
+<html lang="bn">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -78,32 +79,39 @@
   <header>Crunchyroll Premium Subscription</header>
   <div class="hero">
     <img src="https://i.ibb.co/WWR5XwRz/anime-banner.jpg" alt="Crunchyroll Anime">
-  </div>  <div class="price-card">
+  </div>
+
+  <div class="price-card">
     <h2>কার্ড 💳</h2>
     <p>আপনি যেকোনো এমাউন্ট দিন এবং Add to Card ক্লিক করুন</p>
     <input type="number" id="amount" placeholder="৳ টাকার পরিমাণ লিখুন">
     <button onclick="goToPayment()">🛒 Add to Card</button>
-  </div>  <div class="package-details">
+  </div>
+
+  <div class="package-details">
     <h3>Crunchyroll Share Account ⚡</h3>
     📅 1 Month – Only 100 TK<br>
     📅 2 Months – Only 200 TK<br>
     📅 3 Months – Only 300 TK<br>
     📅 6 Months – Only 600 TK<br>
-    📅 8 Months – Only 840 TK<br><h3>Crunchyroll Personal Profile ⚡</h3>
-📅 1 Month – Only 240 TK<br>
-📅 2 Months – Only 480 TK<br>
-📅 3 Months – Only 720 TK<br>
-📅 6 Months – Only 1440 TK<br>
-📅 8 Months – Only 1800 TK<br>
-📅 12 Months – Only 2760 TK<br>
+    📅 8 Months – Only 840 TK<br>
 
-<h3>Crunchyroll Primary Account ⚡</h3>
-📅 1 Month – Only 650 TK<br>
-📅 2 Months – Only 1300 TK<br>
-📅 3 Months – Only 1950 TK<br>
-📅 6 Months – Only 3600 TK
+    <h3>Crunchyroll Personal Profile ⚡</h3>
+    📅 1 Month – Only 240 TK<br>
+    📅 2 Months – Only 480 TK<br>
+    📅 3 Months – Only 720 TK<br>
+    📅 6 Months – Only 1440 TK<br>
+    📅 8 Months – Only 1800 TK<br>
+    📅 12 Months – Only 2760 TK<br>
 
-  </div>  <script>
+    <h3>Crunchyroll Primary Account ⚡</h3>
+    📅 1 Month – Only 650 TK<br>
+    📅 2 Months – Only 1300 TK<br>
+    📅 3 Months – Only 1950 TK<br>
+    📅 6 Months – Only 3600 TK
+  </div>
+
+  <script>
     function goToPayment() {
       const amount = document.getElementById("amount").value;
       if (!amount || amount <= 0) {
@@ -112,5 +120,6 @@
       }
       window.location.href = "payment.html?amount=" + encodeURIComponent(amount);
     }
-  </script></body>
+  </script>
+</body>
 </html>
