--- a/index.html
+++ b/index.html
@@ -1,125 +1,86 @@
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crunchyroll Premium BD Shop</title>
+  <title>Crunchyroll Premium BD</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #151c2e, #0e1d23);
+      color: white;
       margin: 0;
       padding: 0;
-      background: linear-gradient(to right, #1f1f2e, #2c3e50);
-      color: white;
     }
-    header {
-      background-color: #ff6600;
-      padding: 15px;
-      text-align: center;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    .container {
+      max-width: 400px;
+      margin: 50px auto;
+      background-color: #1e293b;
+      border-radius: 10px;
       padding: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
     }
-    .hero img {
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    input[type="number"] {
       width: 100%;
-      max-width: 600px;
-      border-radius: 12px;
-    }
-    .price-card {
-      background: #fff;
-      color: #000;
-      border-radius: 12px;
-      padding: 20px;
-      margin-top: 20px;
-      text-align: center;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .price-card input[type="number"] {
       padding: 10px;
-      width: 100%;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      margin: 10px 0;
+      margin-top: 10px;
+      border-radius: 5px;
+      border: none;
     }
-    .price-card button {
-      background-color: #ff6600;
+    .card-button {
+      background-color: #ef4444;
       color: white;
       border: none;
-      padding: 12px 20px;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: 5px;
+      padding: 10px;
+      margin-top: 15px;
+      width: 100%;
       cursor: pointer;
-    }
-    .price-card button:hover {
-      background-color: #e65c00;
-    }
-    .package-details {
-      max-width: 700px;
-      margin: 30px auto;
-      background: #222c3b;
-      border-radius: 12px;
-      padding: 20px;
       font-size: 16px;
-      line-height: 1.6;
     }
-    .package-details h3 {
-      color: #ff6600;
-      margin-bottom: 10px;
+    .card-button:hover {
+      background-color: #dc2626;
+    }
+    .product-img {
+      display: block;
+      margin: 0 auto;
+      width: 100%;
+      border-radius: 8px;
+    }
+    .description {
+      background-color: #0f172a;
+      border-radius: 8px;
+      padding: 15px;
+      margin-top: 20px;
+      color: #f1f5f9;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <header>Crunchyroll Premium Subscription</header>
-  <div class="hero">
-    <img src="https://i.ibb.co/WWR5XwRz/anime-banner.jpg" alt="Crunchyroll Anime">
-  </div>
-
-  <div class="price-card">
-    <h2>কার্ড 💳</h2>
-    <p>আপনি যেকোনো এমাউন্ট দিন এবং Add to Card ক্লিক করুন</p>
-    <input type="number" id="amount" placeholder="৳ টাকার পরিমাণ লিখুন">
-    <button onclick="goToPayment()">🛒 Add to Card</button>
-  </div>
-
-  <div class="package-details">
-    <h3>Crunchyroll Share Account ⚡</h3>
-    📅 1 Month – Only 100 TK<br>
-    📅 2 Months – Only 200 TK<br>
-    📅 3 Months – Only 300 TK<br>
-    📅 6 Months – Only 600 TK<br>
-    📅 8 Months – Only 840 TK<br>
-
-    <h3>Crunchyroll Personal Profile ⚡</h3>
-    📅 1 Month – Only 240 TK<br>
-    📅 2 Months – Only 480 TK<br>
-    📅 3 Months – Only 720 TK<br>
-    📅 6 Months – Only 1440 TK<br>
-    📅 8 Months – Only 1800 TK<br>
-    📅 12 Months – Only 2760 TK<br>
-
-    <h3>Crunchyroll Primary Account ⚡</h3>
-    📅 1 Month – Only 650 TK<br>
-    📅 2 Months – Only 1300 TK<br>
-    📅 3 Months – Only 1950 TK<br>
-    📅 6 Months – Only 3600 TK
-  </div>
-
-  <script>
-    function goToPayment() {
-      const amount = document.getElementById("amount").value;
-      if (!amount || amount <= 0) {
-        alert("দয়া করে একটি সঠিক এমাউন্ট লিখুন।");
-        return;
+  <div class="container">
+    <img class="product-img" src="https://i.imgur.com/VbdEzQe.png" alt="Crunchyroll Premium">
+    <h2>Crunchyroll Premium Subscription</h2>
+    <form id="cartForm">
+      <label>Amount (৳)</label>
+      <input type="number" id="amount" placeholder="যে এমাউন্ট নিতে চান তা লিখুন" required>
+      <button class="card-button" type="submit">Add to Cart 🛒</button>
+    </form>
+    <div class="description">
+      Crunchyroll হল একটি জনপ্রিয় স্ট্রিমিং প্ল্যাটফর্ম যা মূলত জাপানি অ্যানিমে, মাঙ্গা এবং কিছু এশিয়ান ড্রামা দেখার জন্য ব্যবহৃত হয়। এখানে আপনি হাজার হাজার অ্যানিমে সিরিজ, সিনেমা এবং কমিকস অনলাইনে দেখতে পারবেন।
+    </div>
+  </div>  <script>
+    document.getElementById('cartForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const amount = document.getElementById('amount').value;
+      if(amount && amount > 0){
+        window.location.href = `payment.html?amount=${amount}`;
+      } else {
+        alert('অনুগ্রহ করে একটি সঠিক এমাউন্ট লিখুন।');
       }
-      window.location.href = "payment.html?amount=" + encodeURIComponent(amount);
-    }
-  </script>
-</body>
+    });
+  </script></body>
 </html>
