--- a/index.html
+++ b/index.html
@@ -2,85 +2,126 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crunchyroll Premium BD</title>
+  <title>Crunchyroll Premium Subscription</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #151c2e, #0e1d23);
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom, #131c2b, #202f45);
       color: white;
       margin: 0;
       padding: 0;
     }
-    .container {
-      max-width: 400px;
-      margin: 50px auto;
-      background-color: #1e293b;
-      border-radius: 10px;
+    header {
+      background-color: #0a0f1c;
       padding: 20px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-    }
-    h2 {
       text-align: center;
-      margin-bottom: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+    }
+    header h1 {
+      margin: 0;
+      color: #ff9f1c;
+    }
+    .hero {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .hero img {
+      width: 90%;
+      max-width: 600px;
+      border-radius: 10px;
+    }
+    .section {
+      background-color: #1c2a3a;
+      margin: 20px auto;
+      padding: 20px;
+      max-width: 700px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+    }
+    .section h2 {
+      color: #ff4081;
+      border-bottom: 2px solid #ff4081;
+      padding-bottom: 5px;
+    }
+    .price {
+      font-size: 24px;
+      color: #ffcc00;
+      margin: 10px 0;
     }
     input[type="number"] {
       width: 100%;
       padding: 10px;
-      margin-top: 10px;
-      border-radius: 5px;
+      margin: 10px 0;
       border: none;
+      border-radius: 8px;
+      font-size: 18px;
     }
-    .card-button {
-      background-color: #ef4444;
+    button {
+      width: 100%;
+      padding: 12px;
+      font-size: 18px;
+      background-color: #ff4081;
       color: white;
       border: none;
-      border-radius: 5px;
-      padding: 10px;
-      margin-top: 15px;
-      width: 100%;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    .card-button:hover {
-      background-color: #dc2626;
-    }
-    .product-img {
-      display: block;
-      margin: 0 auto;
-      width: 100%;
       border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    button:hover {
+      background-color: #e23370;
     }
     .description {
-      background-color: #0f172a;
-      border-radius: 8px;
-      padding: 15px;
       margin-top: 20px;
-      color: #f1f5f9;
-      font-size: 14px;
+      line-height: 1.7;
+    }
+    .whatsapp-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      border-radius: 50%;
+      padding: 15px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      cursor: pointer;
+    }
+    .whatsapp-button img {
+      width: 30px;
+      height: 30px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img class="product-img" src="https://i.imgur.com/VbdEzQe.png" alt="Crunchyroll Premium">
+  <header>
+    <h1>Crunchyroll Premium</h1>
+  </header>
+  <div class="hero">
+    <img src="https://i.ibb.co/WWR5XwRz/anime-banner.jpg" alt="Anime Banner">
+  </div>
+  <div class="section">
     <h2>Crunchyroll Premium Subscription</h2>
-    <form id="cartForm">
-      <label>Amount (৳)</label>
-      <input type="number" id="amount" placeholder="যে এমাউন্ট নিতে চান তা লিখুন" required>
-      <button class="card-button" type="submit">Add to Cart 🛒</button>
-    </form>
-    <div class="description">
-      Crunchyroll হল একটি জনপ্রিয় স্ট্রিমিং প্ল্যাটফর্ম যা মূলত জাপানি অ্যানিমে, মাঙ্গা এবং কিছু এশিয়ান ড্রামা দেখার জন্য ব্যবহৃত হয়। এখানে আপনি হাজার হাজার অ্যানিমে সিরিজ, সিনেমা এবং কমিকস অনলাইনে দেখতে পারবেন।
-    </div>
-  </div>  <script>
-    document.getElementById('cartForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const amount = document.getElementById('amount').value;
-      if(amount && amount > 0){
-        window.location.href = `payment.html?amount=${amount}`;
-      } else {
-        alert('অনুগ্রহ করে একটি সঠিক এমাউন্ট লিখুন।');
+    <p class="price">
+      ৳69.00 to ৳2499.00
+    </p>
+    <input type="number" id="amount" placeholder="যে এমাউন্টটি দিতে চান তা লিখুন">
+    <button onclick="addToCart()">🛒 Add to Cart</button>
+  </div>
+  <div class="section">
+    <h2>📘 Description</h2>
+    <p class="description">
+      Crunchyroll হলো একটি জনপ্রিয় স্ট্রিমিং প্ল্যাটফর্ম যা মূলত জাপানি এনিমে, ম্যানগা এবং কিছু এশিয়ান ড্রামা দেখার জন্য্য ব্যবহৃত হয়। এখানে আপনি হাজার হাজার এনিমে সিরিজ, সিনেমা এবং কমিক্স অনলাইনে দেখতে পারবেন।
+    </p>
+  </div>
+  <a class="whatsapp-button" href="https://wa.me/8801305736690" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+  </a>  <script>
+    function addToCart() {
+      const amount = document.getElementById("amount").value;
+      if (!amount || amount <= 0) {
+        alert("দয়া করে একটি বৈধ এমাউন্ট লিখুন।");
+        return;
       }
-    });
+      window.location.href = `https://example.com/payment?amount=${amount}`; // আপনার পেমেন্ট পেজের লিঙ্ক দিন
+    }
   </script></body>
 </html>
