--- a/index.html
+++ b/index.html
@@ -2,86 +2,126 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crunchyroll Premium BD</title>
+  <title>Crunchyroll Premium Subscription</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom, #131c2b, #202f45);
+      color: white;
       margin: 0;
-      background: linear-gradient(to right, #fdfcfb, #e2d1c3);
-      color: #333;
+      padding: 0;
     }
     header {
-      background-color: #ff6600;
+      background-color: #0a0f1c;
       padding: 20px;
       text-align: center;
-      color: white;
-      font-size: 28px;
-      font-weight: bold;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+    }
+    header h1 {
+      margin: 0;
+      color: #ff9f1c;
     }
     .hero {
       text-align: center;
-      padding: 40px 20px;
+      margin-top: 20px;
     }
     .hero img {
-      max-width: 250px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      width: 90%;
+      max-width: 600px;
+      border-radius: 10px;
     }
-    .hero h2 {
-      margin-top: 20px;
-      color: #ff6600;
-      font-size: 26px;
-    }
-    .card {
-      background: #fff;
-      max-width: 400px;
-      margin: 30px auto;
+    .section {
+      background-color: #1c2a3a;
+      margin: 20px auto;
       padding: 20px;
+      max-width: 700px;
       border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+      box-shadow: 0 0 15px rgba(0,0,0,0.4);
     }
-    .card input {
+    .section h2 {
+      color: #ff4081;
+      border-bottom: 2px solid #ff4081;
+      padding-bottom: 5px;
+    }
+    .price {
+      font-size: 24px;
+      color: #ffcc00;
+      margin: 10px 0;
+    }
+    input[type="number"] {
       width: 100%;
       padding: 10px;
-      margin-bottom: 15px;
+      margin: 10px 0;
+      border: none;
       border-radius: 8px;
-      border: 1px solid #ccc;
+      font-size: 18px;
     }
-    .card button {
+    button {
       width: 100%;
-      background: #ff6600;
+      padding: 12px;
+      font-size: 18px;
+      background-color: #ff4081;
       color: white;
       border: none;
-      padding: 12px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 16px;
+      transition: 0.3s;
     }
-    .card button:hover {
-      background: #e85c00;
+    button:hover {
+      background-color: #e23370;
     }
-    .footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #666;
+    .description {
+      margin-top: 20px;
+      line-height: 1.7;
+    }
+    .whatsapp-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      border-radius: 50%;
+      padding: 15px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      cursor: pointer;
+    }
+    .whatsapp-button img {
+      width: 30px;
+      height: 30px;
     }
   </style>
 </head>
 <body>
-  <header>🔥 Crunchyroll Premium BD 🔥</header>  <div class="hero">
+  <header>
+    <h1>Crunchyroll Premium</h1>
+  </header>
+  <div class="hero">
     <img src="https://i.ibb.co/WWR5XwRz/anime-banner.jpg" alt="Anime Banner">
-    <h2>নতুন প্যাকেজ নিন! 🎉</h2>
-  </div>  <div class="card">
-    <input type="number" placeholder="আপনার এমাউন্ট লিখুন (৳)">
-    <button onclick="addToCard()">🛒 Add to Card</button>
-  </div>  <div class="footer">
-    &copy; 2025 Crunchyroll Premium BD | All rights reserved
-  </div>  <script>
-    function addToCard() {
-      alert("✅ আপনার পেমেন্ট কার্ডে যোগ হয়েছে! এখন Checkout করুন।");
-      // location.href = "payment.html"; // পেমেন্ট পেজে নিয়ে যেতে চাইলে
+  </div>
+  <div class="section">
+    <h2>Crunchyroll Premium Subscription</h2>
+    <p class="price">
+      ৳69.00 to ৳2499.00
+    </p>
+    <input type="number" id="amount" placeholder="যে এমাউন্টটি দিতে চান তা লিখুন">
+    <button onclick="addToCart()">🛒 Add to Cart</button>
+  </div>
+  <div class="section">
+    <h2>📘 Description</h2>
+    <p class="description">
+      Crunchyroll হলো একটি জনপ্রিয় স্ট্রিমিং প্ল্যাটফর্ম যা মূলত জাপানি এনিমে, ম্যানগা এবং কিছু এশিয়ান ড্রামা দেখার জন্য্য ব্যবহৃত হয়। এখানে আপনি হাজার হাজার এনিমে সিরিজ, সিনেমা এবং কমিক্স অনলাইনে দেখতে পারবেন।
+    </p>
+  </div>
+  <a class="whatsapp-button" href="https://wa.me/8801305736690" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+  </a>  <script>
+    function addToCart() {
+      const amount = document.getElementById("amount").value;
+      if (!amount || amount <= 0) {
+        alert("দয়া করে একটি বৈধ এমাউন্ট লিখুন।");
+        return;
+      }
+      window.location.href = `https://example.com/payment?amount=${amount}`; // আপনার পেমেন্ট পেজের লিঙ্ক দিন
     }
   </script></body>
 </html>
