--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crunchyroll Premium Subscription</title>
+  <title>Crunchyroll Premium BD Shop</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -22,58 +24,33 @@
       margin: 0;
       color: #ff9f1c;
     }
-    .hero {
-      text-align: center;
-      margin-top: 20px;
-    }
-    .hero img {
-      width: 90%;
-      max-width: 600px;
-      border-radius: 10px;
-    }
-    .section {
-      background-color: #1c2a3a;
-      margin: 20px auto;
-      padding: 20px;
+    .container, .section, .hero {
       max-width: 700px;
-      border-radius: 12px;
+      margin: 20px auto;
+      background: #1c2a3a;
+      padding: 20px;
+      border-radius: 10px;
       box-shadow: 0 0 15px rgba(0,0,0,0.4);
     }
-    .section h2 {
-      color: #ff4081;
-      border-bottom: 2px solid #ff4081;
-      padding-bottom: 5px;
-    }
-    .price {
-      font-size: 24px;
-      color: #ffcc00;
-      margin: 10px 0;
-    }
-    input[type="number"] {
+    .container input, .container select, .container button {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
-      border: none;
       border-radius: 8px;
-      font-size: 18px;
+      border: none;
+      font-size: 16px;
     }
-    button {
-      width: 100%;
-      padding: 12px;
-      font-size: 18px;
+    .container button {
       background-color: #ff4081;
       color: white;
-      border: none;
-      border-radius: 8px;
       cursor: pointer;
-      transition: 0.3s;
     }
-    button:hover {
+    .container button:hover {
       background-color: #e23370;
     }
-    .description {
-      margin-top: 20px;
-      line-height: 1.7;
+    .hero img {
+      width: 100%;
+      border-radius: 10px;
     }
     .whatsapp-button {
       position: fixed;
@@ -93,35 +70,105 @@
 </head>
 <body>
   <header>
-    <h1>Crunchyroll Premium</h1>
-  </header>
-  <div class="hero">
+    <h1>Crunchyroll Premium BD Shop</h1>
+  </header>  <div class="hero">
     <img src="https://i.ibb.co/WWR5XwRz/anime-banner.jpg" alt="Anime Banner">
-  </div>
-  <div class="section">
-    <h2>Crunchyroll Premium Subscription</h2>
-    <p class="price">
-      ৳69.00 to ৳2499.00
-    </p>
+  </div>  <div class="container" id="signup">
+    <h2>🔐 সাইন আপ</h2>
+    <input type="email" id="signupEmail" placeholder="ইমেইল" required>
+    <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর" required>
+    <input type="password" id="signupPassword" placeholder="পাসওয়ার্ড" required>
+    <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড" required>
+    <input type="text" id="signupCity" placeholder="শহর" required>
+    <button onclick="handleSignup()">সাইন আপ করুন</button>
+  </div>  <div class="container" id="login" style="display: none">
+    <h2>🔓 সাইন ইন</h2>
+    <input type="email" id="loginEmail" placeholder="ইমেইল" required>
+    <input type="password" id="loginPassword" placeholder="পাসওয়ার্ড" required>
+    <button onclick="handleLogin()">সাইন ইন করুন</button>
+  </div>  <div class="container" id="mainWebsite" style="display: none">
+    <h2>📦 আপনার পছন্দের প্যাকেজ</h2>
     <input type="number" id="amount" placeholder="যে এমাউন্টটি দিতে চান তা লিখুন">
-    <button onclick="addToCart()">🛒 Add to Cart</button>
-  </div>
-  <div class="section">
-    <h2>📘 Description</h2>
-    <p class="description">
-      Crunchyroll হলো একটি জনপ্রিয় স্ট্রিমিং প্ল্যাটফর্ম যা মূলত জাপানি এনিমে, ম্যানগা এবং কিছু এশিয়ান ড্রামা দেখার জন্য্য ব্যবহৃত হয়। এখানে আপনি হাজার হাজার এনিমে সিরিজ, সিনেমা এবং কমিক্স অনলাইনে দেখতে পারবেন।
-    </p>
-  </div>
-  <a class="whatsapp-button" href="https://wa.me/8801305736690" target="_blank">
+    <button onclick="addToCart()">🛒 Add to Cart</button><form id="orderForm">
+  <input type="text" name="name" placeholder="Full Name" required>
+  <input type="email" name="email" placeholder="Email" required>
+  <input type="text" name="address" placeholder="Street Address" required>
+  <input type="text" name="mobile" placeholder="Mobile Number" required>
+  <select name="package">
+    <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
+    <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
+  </select>
+  <input type="text" name="payment_number" placeholder="Payment Number" required>
+  <input type="text" name="trans_id" placeholder="Transaction ID" required>
+  <select name="payment_method" required>
+    <option value="Bkash">Bkash</option>
+    <option value="Nagad">Nagad</option>
+  </select>
+  <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
+</form>
+
+  </div>  <a class="whatsapp-button" href="https://wa.me/8801305736690" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
   </a>  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
+      authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
+      projectId: "crunchyrollpremiumbd-shop"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
+    function handleSignup() {
+      const email = document.getElementById("signupEmail").value;
+      const phone = document.getElementById("signupPhone").value;
+      const pass = document.getElementById("signupPassword").value;
+      const confirm = document.getElementById("signupConfirm").value;
+      const city = document.getElementById("signupCity").value;
+      if (pass !== confirm) return alert("Password মিলছে না");
+
+      db.collection("users").add({
+        email, phone, city,
+        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+      }).then(() => {
+        alert("সাইন আপ সফল! এখন লগইন করুন।");
+        document.getElementById("signup").style.display = "none";
+        document.getElementById("login").style.display = "block";
+      });
+    }
+
+    function handleLogin() {
+      const email = document.getElementById("loginEmail").value;
+      const pass = document.getElementById("loginPassword").value;
+
+      db.collection("users").where("email", "==", email).get().then(snapshot => {
+        if (snapshot.empty) return alert("ইউজার পাওয়া যায়নি!");
+        document.getElementById("login").style.display = "none";
+        document.getElementById("mainWebsite").style.display = "block";
+      });
+    }
+
     function addToCart() {
       const amount = document.getElementById("amount").value;
       if (!amount || amount <= 0) {
         alert("দয়া করে একটি বৈধ এমাউন্ট লিখুন।");
         return;
       }
-      window.location.href = `https://example.com/payment?amount=${amount}`; // আপনার পেমেন্ট পেজের লিঙ্ক দিন
+      alert(`আপনি ৳${amount} টাকার প্যাকেজ সিলেক্ট করেছেন। নিচে তথ্য পূরণ করে অর্ডার করুন।`);
     }
+
+    document.getElementById("orderForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+      const order = {};
+      formData.forEach((v, k) => order[k] = v);
+      order.timestamp = firebase.firestore.FieldValue.serverTimestamp();
+
+      db.collection("orders").add(order).then(() => {
+        alert("✅ অর্ডার কনফার্ম হয়েছে!");
+        document.getElementById("orderForm").reset();
+      }).catch(err => {
+        alert("❌ অর্ডার ব্যর্থ হয়েছে");
+      });
+    });
   </script></body>
 </html>
