--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       width: 30px;
       height: 30px;
     }
+    #paymentPage {
+      background-color: #3a2a2a;
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -73,40 +77,42 @@
     <h1>Crunchyroll Premium BD Shop</h1>
   </header>  <div class="hero">
     <img src="https://i.ibb.co/WWR5XwRz/anime-banner.jpg" alt="Anime Banner">
-  </div>  <div class="container" id="signup">
+  </div>  <!-- Signup Section -->  <div class="container" id="signup">
     <h2>🔐 সাইন আপ</h2>
-    <input type="email" id="signupEmail" placeholder="ইমেইল" required>
-    <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর" required>
-    <input type="password" id="signupPassword" placeholder="পাসওয়ার্ড" required>
-    <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড" required>
-    <input type="text" id="signupCity" placeholder="শহর" required>
+    <input type="email" id="signupEmail" placeholder="ইমেইল">
+    <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর">
+    <input type="password" id="signupPassword" placeholder="পাসওয়ার্ড">
+    <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড">
+    <input type="text" id="signupCity" placeholder="শহর">
     <button onclick="handleSignup()">সাইন আপ করুন</button>
-  </div>  <div class="container" id="login" style="display: none">
+  </div>  <!-- Login Section -->  <div class="container" id="login" style="display:none">
     <h2>🔓 সাইন ইন</h2>
-    <input type="email" id="loginEmail" placeholder="ইমেইল" required>
-    <input type="password" id="loginPassword" placeholder="পাসওয়ার্ড" required>
+    <input type="email" id="loginEmail" placeholder="ইমেইল">
+    <input type="password" id="loginPassword" placeholder="পাসওয়ার্ড">
     <button onclick="handleLogin()">সাইন ইন করুন</button>
-  </div>  <div class="container" id="mainWebsite" style="display: none">
+  </div>  <!-- Main Page -->  <div class="container" id="mainPage" style="display:none">
     <h2>📦 আপনার পছন্দের প্যাকেজ</h2>
     <input type="number" id="amount" placeholder="যে এমাউন্টটি দিতে চান তা লিখুন">
-    <button onclick="addToCart()">🛒 Add to Cart</button><form id="orderForm">
-  <input type="text" name="name" placeholder="Full Name" required>
-  <input type="email" name="email" placeholder="Email" required>
-  <input type="text" name="address" placeholder="Street Address" required>
-  <input type="text" name="mobile" placeholder="Mobile Number" required>
-  <select name="package">
-    <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
-    <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
-  </select>
-  <input type="text" name="payment_number" placeholder="Payment Number" required>
-  <input type="text" name="trans_id" placeholder="Transaction ID" required>
-  <select name="payment_method" required>
-    <option value="Bkash">Bkash</option>
-    <option value="Nagad">Nagad</option>
-  </select>
-  <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-</form>
-
+    <button onclick="goToPayment()">🛒 Add to Cart</button>
+  </div>  <!-- Payment Page -->  <div class="container" id="paymentPage">
+    <h2>✅ পেমেন্ট ইনফরমেশন দিন</h2>
+    <form id="orderForm">
+      <input type="text" name="name" placeholder="Full Name" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <input type="text" name="address" placeholder="Street Address" required>
+      <input type="text" name="mobile" placeholder="Mobile Number" required>
+      <select name="package">
+        <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
+        <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
+      </select>
+      <input type="text" name="payment_number" placeholder="Payment Number" required>
+      <input type="text" name="trans_id" placeholder="Transaction ID" required>
+      <select name="payment_method" required>
+        <option value="Bkash">Bkash</option>
+        <option value="Nagad">Nagad</option>
+      </select>
+      <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
+    </form>
   </div>  <a class="whatsapp-button" href="https://wa.me/8801305736690" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
   </a>  <script>
@@ -126,34 +132,30 @@
       const city = document.getElementById("signupCity").value;
       if (pass !== confirm) return alert("Password মিলছে না");
 
-      db.collection("users").add({
-        email, phone, city,
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-      }).then(() => {
-        alert("সাইন আপ সফল! এখন লগইন করুন।");
-        document.getElementById("signup").style.display = "none";
-        document.getElementById("login").style.display = "block";
-      });
+      db.collection("users").add({ email, phone, city, timestamp: firebase.firestore.FieldValue.serverTimestamp() })
+        .then(() => {
+          alert("সাইন আপ সফল! এখন লগইন করুন।");
+          document.getElementById("signup").style.display = "none";
+          document.getElementById("login").style.display = "block";
+        });
     }
 
     function handleLogin() {
       const email = document.getElementById("loginEmail").value;
       const pass = document.getElementById("loginPassword").value;
-
-      db.collection("users").where("email", "==", email).get().then(snapshot => {
-        if (snapshot.empty) return alert("ইউজার পাওয়া যায়নি!");
-        document.getElementById("login").style.display = "none";
-        document.getElementById("mainWebsite").style.display = "block";
-      });
+      db.collection("users").where("email", "==", email).get()
+        .then(snapshot => {
+          if (snapshot.empty) return alert("ইউজার পাওয়া যায়নি!");
+          document.getElementById("login").style.display = "none";
+          document.getElementById("mainPage").style.display = "block";
+        });
     }
 
-    function addToCart() {
+    function goToPayment() {
       const amount = document.getElementById("amount").value;
-      if (!amount || amount <= 0) {
-        alert("দয়া করে একটি বৈধ এমাউন্ট লিখুন।");
-        return;
-      }
-      alert(`আপনি ৳${amount} টাকার প্যাকেজ সিলেক্ট করেছেন। নিচে তথ্য পূরণ করে অর্ডার করুন।`);
+      if (!amount || amount <= 0) return alert("বৈধ এমাউন্ট লিখুন।");
+      document.getElementById("mainPage").style.display = "none";
+      document.getElementById("paymentPage").style.display = "block";
     }
 
     document.getElementById("orderForm").addEventListener("submit", function(e) {
